@@ -24,11 +24,12 @@ define( function( require ) {
   
   /**
    * @param {number} screenWidth
-   * @param {IntroductionModel} model of simulation
+   * @param {Property<Equation>} equationProperty
+   * @param {[Equation]} equations
    * @param {Object} options
    * @constructor
    */
-  function EquationChoiceNode( screenWidth, model, options ) {
+  function EquationChoiceNode( screenWidth, equationProperty, equations, options ) {
 
     Node.call( this );
 
@@ -37,8 +38,8 @@ define( function( require ) {
 
     // radio buttons, one for each equation, arranged horizontally
     var radioButtons = [];
-    model.equations.forEach( function( equation ) {
-       radioButtons.push( new AquaRadioButton( model.equationProperty, equation, new Text( equation.name, TEXT_OPTIONS ), RADIO_BUTTON_OPTIONS ) );
+    equations.forEach( function( equation ) {
+       radioButtons.push( new AquaRadioButton( equationProperty, equation, new Text( equation.name, TEXT_OPTIONS ), RADIO_BUTTON_OPTIONS ) );
     } );
     this.addChild( new HBox( {
       children: radioButtons,
