@@ -1,3 +1,4 @@
+7/14/14 remove coupling between EquationChoiceNode and IntroductionModel
 7/14/14 rename IntroductionModel.currentEquation to equation
 7/14/14 remove coupling between BoxesNode and models
 7/14/14 give GameModel.currentEquation a non-null initial value, to prevent the recurring problems that this had been causing
